<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.teravision.unicef.kidpower.activities.general.LogInActivity">

    <!--<include android:id="@+id/includedAppBarTitle"-->
    <!--layout="@layout/view_app_bar"-->
    <!--/>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_blue_50">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/paddingEndStart"
            android:paddingStart="@dimen/paddingEndStart">

            <ImageView
                android:id="@+id/ivKidPowerLogo"
                android:layout_width="@dimen/dimen_icon_login_width_height"
                android:layout_height="@dimen/dimen_icon_login_width_height"
                android:adjustViewBounds="true"
                android:layout_marginTop="34dp"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo_roche" />

            <TextView
                android:id="@+id/title1_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guia"
                android:layout_below="@+id/ivKidPowerLogo"
                android:textSize="68sp"
                android:textStyle="bold"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/title2_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/efectos_adversos"
                android:layout_below="@+id/title1_login"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="0dp"
                android:gravity="center" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido"
                android:layout_below="@+id/title2_login"
                android:textSize="28sp"
                android:textAllCaps="true"
                android:layout_marginTop="5dp"
                android:gravity="center" />

            <RelativeLayout
                android:id="@+id/viewContentUserData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeText"
                android:layout_marginTop="12dp">


                <RelativeLayout
                    android:id="@+id/relativeLayoutMailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen_padding_between_items"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/editTextUser"
                        style="@style/GralEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_height_item_medium"
                        android:ellipsize="middle"
                        android:imeOptions="actionNext"
                        android:hint="@string/usuario"
                        android:inputType="textEmailAddress">

                        <requestFocus />

                    </EditText>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayoutPwdContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/relativeLayoutMailContent">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/GralEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_height_item_medium"
                        android:imeOptions="actionGo"
                        android:hint="@string/pass"
                        android:inputType="textPassword" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relativeLayoutPwdContent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textViewForgotPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="forgotPassword"
                        android:text="@string/recuperar_contraseña"
                        android:textAlignment="textEnd"
                        android:layout_marginRight="10dp" />
                </RelativeLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/GralbtnTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="@dimen/dimen_margin_bottom_button"
                android:text="@string/conectar"
                android:textAllCaps="false"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />


        </RelativeLayout>

        <TextView
            android:id="@+id/textViewRequestAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solicitar_acceso"
            android:textAlignment="textEnd"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="30dp" />
    </RelativeLayout>
</layout>

